--- a/.github/workflows/ci-manual.yaml
+++ b/.github/workflows/ci-manual.yaml
@@ -1,6 +1,7 @@
-name: "CI: Run Unit Tests & Test Dev Container"
+name: "CI: Test Nuitka Container"
 
 on:
+  workflow_dispatch:
   pull_request:
     branches: [ "main" ]
   push:
@@ -11,43 +12,13 @@ permissions:
   packages: write
 
 jobs:
-  check-quality:
-    name: Code Quality & Tests
+  test-nuitka-container:
+    name: Integration Tests
     runs-on: ubuntu-latest
     
     steps:
       - name: Checkout Code
         uses: actions/checkout@v6
-
-      - name: Install uv
-        uses: astral-sh/setup-uv@v7
-        with:
-          enable-cache: true
-          version: "latest"
-
-      - name: Set up Python
-        uses: actions/setup-python@v6
-        with:
-          python-version: "3.13"
-
-      - name: Install Dependencies
-        run: uv sync --frozen
-
-      - name: Lint (Ruff)
-        run: |
-          uv run ruff check .
-
-      - name: Run Tests
-        run: uv run pytest tests/ --ignore=tests/test_integration.py -v
-
-
-  test-container:
-    name: Build & Smoke Test Container
-    runs-on: ubuntu-latest
-    needs: check-quality
-    
-    steps:
-      - uses: actions/checkout@v6
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -59,23 +30,23 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and export
-        uses: docker/build-push-action@v6
+      - name: Build Nuitka Image
+        uses: docker/build-push-action@v5
         with:
           context: .
-          file: Containerfile.dev
+          file: Containerfile
           load: true
-          tags: dependency-cmp:dev
-          cache-from: type=registry,ref=ghcr.io/${{ github.repository }}:dev-build-cache
-          cache-to: type=registry,ref=ghcr.io/${{ github.repository }}:dev-build-cache,mode=max
+          tags: dependency-cmp:dev-nuitka
+          cache-from: type=registry,ref=ghcr.io/${{ github.repository }}:release-build-cache
+          cache-to: type=registry,ref=ghcr.io/${{ github.repository }}:release-build-cache,mode=max
 
-      - name: Start built image
+      - name: Start Background Container
         run: |
           docker run -d \
             --name integration-runner \
             --entrypoint /bin/sh \
             -v $(pwd)/tests/test-data:/tests/test-data \
-            dependency-cmp:dev \
+            dependency-cmp:dev-nuitka \
             -c "sleep infinity"
 
       - name: Verify Plugin Configuration Exists
