--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -88,7 +88,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
-          file: Containerfile.dev
+          file: Containerfile.standard
           load: true
           tags: dependency-cmp:dev
           cache-from: type=registry,ref=ghcr.io/${{ github.repository }}:dev-build-cache
